2009-09-25  Jonathan Pryor  <jpryor@novell.com>

	* Monodoc/ecma-provider.cs: Don't return 'null' from GetPublicUrl(),
	  but instead provide a decent URL even if the url isn't to a single
	  member, but instead to show all members, e.g. T:System.String/*.
	* Monodoc/provider.cs: Obsolete Node.URL.  It's too variable for sane
	  use; use Node.PublicUrl.

2009-09-09  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Documentation/ManifestResourceResolver.cs: Allow it to lookup
	  files located in multiple directories.  Needed so that 'mdoc
	  export-html' can properly deal with multiple source directories.

2009-08-13  Jonathan Pryor  <jpryor@novell.com>

	* Monodoc/provider.cs: Add a RootTree.AddSource(string) method, so that 
	  additional directories can be checked for .source file loading.

2009-08-13  Jonathan Pryor  <jpryor@novell.com>

	* Monodoc/provider.cs: Make RootTree.LoadTree() just call
	  RootTree.LoadTree(null), and move the .config-file parsing into
	  .LoadTree(string) (for when basedir==null).  This will simplify the
	  logic of monodoc, as we want to add the ability to monodoc to use
	  any arbitrary directory, and this will remove the need to do 
	  `if (d==null) RootTree.LoadTree(); else RootTree.LoadTree(d)`.
	  This also conforms to FxDG guidelines.

2009-08-12  Jonathan Pryor  <jpryor@novell.com>

	* Resources/mdoc-html-format: Added; XSLT file to match
	  "//format[@type='text/html']//*", to support "pass-through"
	  semantics.  This allows you to use actual HTML within your
	  documentation and have it visible to HTML-supporting output formats.
	  WARNING: Use as a "last resort" -- this is primarily intended for
	  importing existing HTML w/o needing lots of extra logic to convert
	  into mdoc format XML first (with a corresponding loss of fidelity).
	  However, it means that if (when) we get non-HTML output format
	  support, the <format type="text/html" /> blocks WILL be skipped for
	  that non-HTML output format.
